# muograph

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml  run-mypy  setup.cfg
.github/workflow/: lint.yml  test.yml
.github/workflows/: lint.yml  test.yml
examples/: 00_MST_reconstruction_example.ipynb  00_scattering_small_size_statue.ipynb
muograph/data/Marble_statue_80x40x40_scattering_bronze_bar/: specs.txt
muograph/data/iron_barrel/: specs.txt
muograph/hits/: hits.py
muograph/metric/: metric.py
muograph/plotting/: EM_plotting.py  params.py  plotting.py  voxel.py
muograph/reconstruction/: asr.py  binned_clustered.py  em.py  poca.py  tracking_em_test.py  voxel_inferer.py
muograph/test/: test_asr.py  test_bca.py  test_hits.py  test_poca.py  test_tracks.py  test_tracks_mst.py
muograph/tracking/: tracking.py  tracking_em.py
muograph/utils/: datatype.py  device.py  save.py  tools.py
muograph/volume/: volume.py
tutorials/: 00_Volume_of_interest.ipynb  01_Hits.ipynb  02_Tracking.ipynb  03_Tracking_muon_Scattering_tomotgraphy.ipynb  04_POCA.ipynb  05_Binned_clustered_algorithm.ipynb  06_Angle_statistical_reconstruction.ipynb  EM_reconstruction_example.ipynb  EM_reconstruction_example_CLEAN.ipynb
