[tool.poetry]
name = "muograph"
version = "0.1.5"
description = "Muon tomography data analysis library"
authors = ["Maxime Lagrange"]
readme = "README.md"
keywords = ["physics", "science", "statistics", "tomography"]
include = ["muograph/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
seaborn = ">=0.11.0,<0.12.0"
matplotlib = ">=3.7.0,<3.8.0"
numpy = "^1.26.4"
fastcore = "1.3.20"
fastprogress = "1.0.0"
pandas = ">=1.2.4,<2.0.0"
h5py = "^3.10.0"
scipy = "^1.14.1"
pytest = "<8.0.0"

[tool.poetry.group.dev.dependencies]
notebook = "<7.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.2"
pre-commit = "^3.6.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest-mock = "^3.12.0"
flaky = "^3.7.0"
pytest-lazy-fixture = "^0.6.3"
isort = "^5.13.2"
black = "^24.2.0"
pytest = "<8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''